<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.taekwondoscore.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/team_a"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/contender_a"
                android:textColor="@color/contenderA"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/contender_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:paddingBottom="8dp"
                android:text="@string/current_points"
                android:textColor="@color/scoreText"
                android:textSize="46sp" />
            <TextView
                android:id="@+id/contender_a_fouls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:textColor="@color/noWinner"
                android:text="@string/no_fouls"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnknockDownA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="plusKnockDownCA"
                android:text="@string/knock_down" />

            <Button
                android:id="@+id/btnHeadNeakA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="plusHeadNeakCA"
                android:text="@string/head_neak_point" />

            <Button
                android:id="@+id/btntorsoA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="plusTorsoCA"
                android:text="@string/torso_point"
                android:textAllCaps="true" />
            <Button
                android:id="@+id/btnfoulA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="foulCA"
                android:text="@string/foul"
                android:textAllCaps="true" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            >

        </View>
        <LinearLayout
            android:id="@+id/team_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/contender_b"
                android:textSize="14sp"
                android:textColor="@color/contenderB"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/contender_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="8dp"
                android:text="@string/current_points"
                android:textSize="46sp"
                android:textColor="@color/scoreText"
                android:fontFamily="sans-serif-light"
                />
            <TextView
                android:id="@+id/contender_b_fouls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:textColor="@color/noWinner"
                android:text="@string/no_fouls"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnknockDownB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="plusKnockDownCB"
                android:text="@string/knock_down" />

            <Button
                android:id="@+id/btnHeadNeakB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="plusHeadNeakCB"
                android:text="@string/head_neak_point" />

            <Button
                android:id="@+id/btntorsoB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="plusTorsoCB"
                android:text="@string/torso_point"
                android:textAllCaps="true" />
            <Button
                android:id="@+id/btnfoulB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="foulCB"
                android:text="@string/foul"
                android:textAllCaps="true" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/winnerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/resetButton"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:textSize="24sp"
        android:textColor="@color/winner"/>


    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:onClick="resetScore"
        android:text="@string/reset"
        android:textAllCaps="true" />


</RelativeLayout>
